RESOLVED FIXED241563
CrashTracer: MobileSafari at WebKit: -[WKWebView(WKViewInternalIOS) _updateScrollViewForTransaction:]
https://bugs.webkit.org/show_bug.cgi?id=241563
Summary CrashTracer: MobileSafari at WebKit: -[WKWebView(WKViewInternalIOS) _updateSc...
Simon Fraser (smfr)
Reported 2022-06-13 12:09:13 PDT
Crash data show that rootNode can be null in this function.
Attachments
Simon Fraser (smfr)
Comment 1 2022-06-13 12:11:32 PDT
EWS
Comment 2 2022-06-13 15:49:20 PDT
Committed r295504 (251509@main): <https://commits.webkit.org/251509@main> Reviewed commits have been landed. Closing PR #1477 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-06-13 15:50:13 PDT
Note You need to log in before you can comment on or make changes to this bug.