CrashTracer: MobileSafari at WebKit: -[WKWebView(WKViewInternalIOS) _updateScrollViewForTransaction:] https://bugs.webkit.org/show_bug.cgi?id=241563 <rdar://94621991>

Reviewed by Wenson Hsieh.

Protect against a null root scrolling node.

* Source/WebKit/UIProcess/API/ios/WKWebViewIOS.mm:
(-[WKWebView _updateScrollViewForTransaction:]):

Canonical link: https://commits.webkit.org/251509@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295504 268f45cc-cd09-0410-ab3c-d52691b4dbfc